ya salen todos los spool

--- a/lab_311.html
+++ b/lab_311.html
@@ -2931,11 +2931,7 @@ Fr f T bread, and T f Fr bread
 <br>
 
 
-sql~ @@ C:\basesoracle\oracle_sql_eval\chapter_3\lab_312.sql
-<br>
-sql~ REM Concatenate Strings
-<br>
-sql~ spool lab_312.html
+sql~ spool off;
 <br>
 </body>
 </html>
